option('tests', 
		type: 'feature', 
		value: 'enabled', 
		description: 'Build tests.',)
option('concurrent-update', 
		type: 'feature', 
		value: 'enabled', 
		description: 'concurrent FW update',)
option('fpga_i2c_cntrl_addr',
       type: 'integer',
       min: 0x0,
       max:0xFF,
       description: 'FPGA I2C Controller address',
       value: 0x62,)
option('fw_image_size',
       type: 'integer',
       min: 0x100,
       max: 0x40000,
       description: 'Maximum supported FW image size',
       value: 0x40000,)
option('install_retimer_inventory',
       type: 'boolean',
       description: 'Install Nvidia retimer inventory monitor service.',
       value: false)
option('install_aries_tools',
       type: 'boolean',
       description: 'Install aries tools aries-test, aries-info and aries-update.',
       value: false)
option('retimer_app_support',
       type: 'boolean',
       description: 'Retimer app to update retimer inventory properties.',
       value: false)
option('DBUS_SERVICE_NAME',
       type: 'string',
       value: 'com.Nvidia.RetimerHashCompute',
       description: 'Dbus service name for RetimerHashCompute')
option('FPGA_I2C_BUS',
       type: 'integer',
       value: 3,
       description: 'I2C bus number on which FPGA is connected to HMC.')
option('PLATFORM_TYPE',
       type: 'integer',
       value: 0,
       description: 'Platform type for composite retimer firmware images.')

